--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.3",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0"
