--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.43.1",
@@ -31,6 +33,7 @@
     "lucide-react": "^0.510.0",
     "mammoth": "^1.9.0",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "pdf-parse": "^1.1.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
