--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mammoth": "^1.9.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
@@ -41,6 +42,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.3",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2"
